complet todo list

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 .bg-blue{
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaIkYxluxjfJTuro5eZBq6A1TaSkpgCGxEhU2zbevp0E0TK7G_gEdysHfFxWT5wq5ijMs&usqp=CAU");
+    background-image: url("/images/pexels-content-prod-co-5594286.jpg");
     height: 100vh;
     background-repeat: no-repeat;
-    background-position: center;
+    /* background-position: center; */
     background-size: cover;
 }
